--- a/wechat/src/main/webapp/xcview/html/live_class.html
+++ b/wechat/src/main/webapp/xcview/html/live_class.html
@@ -78,9 +78,17 @@
 						<a href="javascript:;">共<span id="criticizeCountId">{{criticizeCount}}</span>条评价</a>
 					</li>
 				</ul>
-			</div>
-			<ul class="playTime z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'" style="border-bottom: 0;padding: 0.4rem 0 0 0;">
-				<li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
+			</div>  
+				
+                    {{if hostType == 1}}
+                        <ul class="playTime z" style="border-bottom: 0;padding: 0.4rem 0 0 0;"
+                              onclick="window.location='/xcview/html/physician/physicians_page.html?doctor={{doctorId}}'">                        
+                    {{else if hostType == 2}}
+                        <ul class="playTime z" style="border-bottom: 0;padding: 0.4rem 0 0 0;"
+                               onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
+                    {{/if}}            
+
+                <li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
 				<li style="margin-top: 0.18rem;">
 					<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
 					<a href="javascript: ;">
