--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -81,9 +81,16 @@
 					</li>
 				</ul>
 			</div>
-			<ul class="playTime playTimes z" onclick="window.location='/xcview/html/physician/physicians_page.html?doctor={{id}}'">
-				<li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;" /><span style="margin-top: 0.15rem;">{{heir}}</span></li>
-				<li style="margin-top: 0.18rem;">
+				
+                    {{if hostType == 1}}
+                        <ul class="playTime playTimes z"
+                              onclick="window.location='/xcview/html/physician/physicians_page.html?doctor={{doctorId}}'">                        
+                    {{else if hostType == 2}}
+                        <ul class="playTime playTimes z"
+                               onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
+                    {{/if}}   
+                <li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;" /><span style="margin-top: 0.15rem;">{{heir}}</span></li>
+				<li style="margin-top: 0.18rem;"> 
 					<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
 					<a href="jsvascript: ;">
 						<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem;"  />
