--- a/wechat/src/main/webapp/xcview/html/school_play.html
+++ b/wechat/src/main/webapp/xcview/html/school_play.html
@@ -85,9 +85,17 @@
 						<a href="javascript:;">共{{criticizeCount}}条评价</a>
 					</li>
 				</ul>
-			</div>
-			<ul class="playTime z" onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'" style="padding:0.4rem 0 0 0;">
-					<li style='height: 0.6rem;'><img src="{{headImg}}" style='width:0.6rem;height:0.6rem;border-radius: 60px;'/><span style='margin-top: 0.15rem;'>{{heir}}</span></li>
+			</div> 
+
+                    {{if hostType == 1}}
+                        <ul class="playTime z"  style="padding: 0.4rem 0 0 0;"
+                              onclick="window.location='/xcview/html/physician/physicians_page.html?doctor={{doctorId}}'">                        
+                    {{else if hostType == 2}}
+                        <ul class="playTime z"  style="padding: 0.4rem 0 0 0;border: none;"
+                               onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
+                    {{/if}}             
+
+                    <li style='height: 0.6rem;'><img src="{{headImg}}" style='width:0.6rem;height:0.6rem;border-radius: 60px;'/><span style='margin-top: 0.15rem;'>{{heir}}</span></li>
 					<li style='float: right;margin-top: 0.15rem;'>
 						<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
 						<a href="javascript: ;">
