--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -641,13 +641,13 @@ window.onload = function(){
           if(hashName !== '') {  
               var hash = window.location.hash;  
               if(hash === '') {  
-                  alert("你点击了返回键");  
-                  //location.href ='/xcview/html/live_select_album.html'  /*跳转链接*/
+                  location.href ='/xcview/html/live_select_album.html?course_id=' + collectionId  /*跳转链接*/
                   
               }  
           }  
       });  
-      window.history.pushState('forward', null, './xcview/html/live_album.html');    //引号里写当前页面地址,刷新当前页'./inherited_introduction.html'
+	var urlstr = window.location.href;
+      window.history.pushState('forward', null,urlstr);    //引号里写当前页面地址,刷新当前页'./inherited_introduction.html'
   }
 };
 </script> 
