--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -541,7 +541,7 @@
 					<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 					{{/if}}
 					<span class="title">{{item.title}}</span>
-					{{item.content}}
+					<!-- <span class="title">{{item.content}}</span>-->
 					<div class="both"></div>
 				</div>
 				<div class="ccvideo_div">
