--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -190,7 +190,15 @@
 					            	
 					            	<div class="teacher_slider_ul_div teacherRecommend" data-jump="{{item.userId}}">
 					            		<a style="color: #333;" href="/xcview/html/live_personal.html?userLecturerId={{item.userId}}">
-                    						<img src="{{item.headPortrait}}?imageView2/2/w/72" />
+                    					
+                    {{if item.type == 1}}
+                        <a style="color: #333;" href="/xcview/html/physician/physicians_page.html?doctor={{item.doctorId}}">
+                    {{else if item.type == 2}}
+                         <a style="color: #333;" href="/xcview/html/live_personal.html?userLecturerId={{item.userId}}">
+                    {{/if}}
+
+
+                                       	<img src="{{item.headPortrait}}?imageView2/2/w/72" />
                     						<span style="font-size: 0.22rem;">{{item.name}}</span>
                     					</a>
                     				</div>
