--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -632,7 +632,7 @@ $.fn.toggle = function( fn, fn2 ) {
 
 <script> 
 // 控制手机物理键--返回
-window.onload = function(){
+/*window.onload = function(){
   if(window.history && window.history.pushState) {  
       $(window).on('popstate', function() {  
           var hashLocation = location.hash;  
@@ -641,15 +641,15 @@ window.onload = function(){
           if(hashName !== '') {  
               var hash = window.location.hash;  
               if(hash === '') {  
-                  location.href ='/xcview/html/live_select_album.html?course_id=' + collectionId  /*跳转链接*/
+                  location.href ='/xcview/html/live_select_album.html?course_id=' + collectionId 
                   
               }  
           }  
       });  
 	var urlstr = window.location.href;
-      window.history.pushState('forward', null,urlstr);    //引号里写当前页面地址,刷新当前页'./inherited_introduction.html'
+      window.history.pushState('forward', null,urlstr);    
   }
-};
+};*/
 </script> 
 
 
