--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1146,6 +1146,8 @@ his, event);"></textarea> -->
 	<div class="show_height" style="width:100%;height:0.25rem;display:none;"></div>
 	<div class="top_show_height" style="width:100%;height:5.2rem;display:none;"></div>
 
+	<div class="top_show_heights" style="width:100%;height:5.8rem;display:none;"></div>
+
 	<!-- 添加分享 -->
 	<div class="weixin_ceng">
 		<div class="weixin_ceng_bg"></div>
