发现--修改封面图，删除学费。测试专辑跳转

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -96,10 +96,10 @@
                 <span class="number_people">{{countLimit}}</span>
                 <span class="hint">（报名人数不受限，成为弟子需面试）</span>
             </div>
-            <div class="schoolings">
+            <!--<div class="schoolings">
                 <span class="schooling_sizes"><img src="/xcview/images/tuition.png" />束脩：</span>
                 <span class="number_schoolings">￥{{tuition}}</span>
-            </div>
+            </div>-->
             <div class="flow_titles">
                 <p class="titles"><img src="/xcview/images/Sinatv_time.png" />学习时间：{{startTime}}至{{endTime}}</p>
             </div>
