--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -123,6 +123,9 @@
 		.am-pureview-bar-active .am-pureview-actions, .am-pureview-bar-active .am-pureview-bar{
 			opacity: 0;
 		}
+		.minirefresh-theme-default .status-nomore .upwrap-tips{
+			padding: 0 !important;
+		}
 		.am-pureview{
 			z-index: 999999;
 		}
