--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -48,6 +48,11 @@
 	    }
 	}	
 </script>
+<style>
+	.swiper-banner-list{
+		display: block;
+	}
+</style>
 </head>
 <body style="background: #F8F8F8;display: none;">
 	<!--头部搜索开始-->
