--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1602,6 +1602,10 @@ function header_click(){
     /*var minirefresh=$(window).height()-$(".top_show_height").height();
     $(".rests_nav").height(minirefresh);*/
 
+    // 处理整体body区域高度，不让内容有滚动条
+    var body=$(window).height();
+    $("body").height(body);
+
 </script>
 <script type="text/javascript" src="/xcview/html/physician/js/amazeui.js?version=5bdfd7fbfe"></script>
 
