7/10 师承部分结构

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -215,8 +215,8 @@
 						<li class="setTop active" data-name="doc_dynamic"><i class="icomoon-icon-dongtai left_range ino_color"></i><span>我的动态</span></li>
 						<li class="setTop" data-name="doc_banner"><i class="icomoon-icon-zhaopian left_range"></i><span>轮播图设置</span></li>
 						<li class="setTop docSuccessBtn" data-name="doc_hos" id="docJoinHos"><span class="icon iconfont icon-02_dianpuguanli left_range" aria-hidden="true"></span><span>出诊医馆</span></li>
-						<!--<li class="select-ud">
-							<span class="glyphicon glyphicon-book left_range" aria-hidden="true"></span>
+						<li class="select-ud">
+							<i class="icomoon-icon-shoutu left_range"></i>
 							<span>
 									师承收徒
 									<img class="arrow_jt" src="/web/images/icon-select-right.png"/>
@@ -229,7 +229,7 @@
 								<p>师承管理</p>
 								<p>收徒设置</p>
 							</div>
-						</li>-->
+						</li>
 						<li class="setTop" id="nav-colume" data-name="doc_zhuanlan"><i class="icomoon-icon-zhuanlan left_range"></i><span>医案专栏</span></li>
 						<li class="setTop" id="nav-work" data-name="doc_book"><i class="icomoon-icon-zhuzuo left_range"></i><span>著作</span></li>
 						<li class="setTop" id="nav-media" data-name="doc_media"><i class="icomoon-icon-meiti left_range"></i><span>媒体报道</span></li>
@@ -890,7 +890,7 @@
 					</div>
 				</div>
 				<!--收徒-->
-				<!--<div class="select_box">
+				<div class="select_box">
 					<div class="little_box" style="display: block;">
 						跟师直播
 					</div>
@@ -906,7 +906,7 @@
 					<div class="little_box">
 						收徒设置
 					</div>
-				</div>-->
+				</div>
 				<!--医案专栏-->
 				<div class="select_box" id="zhuanlan">
 					<div class="zhuanlan_top">
@@ -1512,6 +1512,7 @@
 	<script type="text/javascript" src="/web/js/MD5/browser-md5-file.js"></script>
 	<!--<script src="/web/js/provinces.js"></script>-->
 	<script src="/web/js/anchors_resources.js?v=ipandatcm_1.2.1" type="text/javascript" charset="UTF-8"></script>
+	<script src="/web/js/anchors_disciple.js?v=ipandatcm_1.2.1" type="text/javascript" charset="UTF-8"></script>
 	<script>
 	
 		//时间插件调用
