添加文章下架页-首页轮播修改

--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -37,7 +37,7 @@
 <link rel="stylesheet" href="/xcview/css/home_pages/home_pages.css">  <!--这是替换css-->
 
 <link rel="stylesheet" type="text/css" href="/xcview/css/swipeslider.css"><!--轮播引入-->
-
+<link rel="stylesheet" href="/xcview/css/physician/swiper-4.2.6.min.css" />
 <script>
 	// 判断横屏展示时的状态
 	window.onorientationchange=function(){
@@ -51,6 +51,16 @@
 <style>
 	.swiper-banner-list{
 		display: block;
+	}
+	.swiper-pagination-bullet{
+		border: none !important;
+	}
+	.swiper-pagination-bullet{
+		width: 14px !important;
+		border-radius: 8px !important;
+	}
+	.swiper-pagination-bullet-active{
+		background: #00BC12 !important;
 	}
 </style>
 </head>
