--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -59,7 +59,8 @@
 		<!--分页部分start-->
 		<!--富文本需要的js-->
 		<script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.config.js"></script>
-		<script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.min.js"></script>
+		<!--<script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.min.js"></script>-->
+		<script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.js"></script>
 		<script type="text/javascript" charset="utf-8" src="/ueditor/lang/zh-cn/zh-cn.js"></script>
 	</head>
 
