学习页面--提交主播医师进入页

--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -183,13 +183,22 @@
 		<div class="follow_people">
 			<ul id="all_follow_people">
 				<script type="text/html" id="data_follow">
-					{{each resultObject as p}} 
-						<li onclick="location.href='live_personal.html?userLecturerId={{p.userId}}'">
-							<div class="img_people">
-								<img src="{{p.smallHeadPhoto}}?imageView2/2/w/100" onerror="nofind();"  />
-							</div>
-							<p>{{p.name}}</p>
-						</li>
+					{{each resultObject as item}} 
+						{{if item.type == 1}}
+							<li onclick="location.href='/xcview/html/physician/physicians_page.html?doctor={{item.doctorId}}'">
+								<div class="img_people">
+									<img src="{{item.smallHeadPhoto}}?imageView2/2/w/100" onerror="nofind();"  />
+								</div>
+								<p>{{item.name}}</p>
+							</li>
+						{{else if item.type == 2}}
+							<li onclick="location.href='live_personal.html?userLecturerId={{item.userId}}'">
+								<div class="img_people">
+									<img src="{{item.smallHeadPhoto}}?imageView2/2/w/100" onerror="nofind();"  />
+								</div>
+								<p>{{item.name}}</p>
+							</li>
+						{{/if}}
 					{{/each}}
 				</script>
 			</ul>
