修改返回的bug

--- a/wechat/src/main/webapp/xcview/html/search.html
+++ b/wechat/src/main/webapp/xcview/html/search.html
@@ -64,7 +64,7 @@
 					</span>
 				</div>
 			</div>
-			<div class="header_cancel" onclick="common_share_backs()">取消</div>
+			<div class="header_cancel" onclick="common_share_back()">取消</div>
 			<!--<div class="header_cancel" onclick="location.href='home_page.html'">取消</div>-->
 			<!--<div class="header_cancel" onclick="javascript:window.history.back();return false;">取消</div>-->
 		</div>
