--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -30,7 +30,7 @@
 	<div class="wrap-header">
 		<div class="header">		
 			<p>课程</p>
-			<div class="arror_return z" onclick="common_share_backs()"> 
+			<div class="arror_return z" onclick="common_share_back()"> 
 			<!-- <div class="arror_return z" onclick="javascript:window.history.back();return false;">-->					
 				<img src="../images/back icon.png" />
 			</div>
