--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -530,11 +530,11 @@
 				{{if item.type == 1}}
 				<!-- 普通动态-->
 				<div class="panel_hide">
-					<div class="essay_main comment_hide panels_essay_main">
+					<div class="essay_main comment_hide panels_essay_main show-text show-text2">
                         {{if item.stick}}<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
                         {{/if}}
                         {{item.content}}</div>
-					<div class="essay_pack_up_btn"><span class="essay_pack_up_btn_span">展开</span></div>
+					<!-- <div class="essay_pack_up_btn"><span class="essay_pack_up_btn_span">展开</span></div>-->
 					<div class="both"></div>
 				</div>
 				
