--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -215,7 +215,7 @@
 						<li class="setTop active" data-name="doc_dynamic"><i class="icomoon-icon-dongtai left_range ino_color"></i><span>我的动态</span></li>
 						<li class="setTop" data-name="doc_banner"><i class="icomoon-icon-zhaopian left_range"></i><span>轮播图设置</span></li>
 						<li class="setTop docSuccessBtn" data-name="doc_hos" id="docJoinHos"><span class="icon iconfont icon-02_dianpuguanli left_range" aria-hidden="true"></span><span>出诊医馆</span></li>
-						<li class="select-ud">
+						<li class="select-ud othor-set" data-name="doc_disciple">
 							<i class="icomoon-icon-shoutu left_range"></i>
 							<span>
 									师承收徒
@@ -224,10 +224,10 @@
 
 							<div class="littleBox">
 								<p class="activeP">跟师直播</p>
-								<p>我的弟子</p>
-								<p>问答解惑</p>
-								<p>师承管理</p>
-								<p>收徒设置</p>
+								<p data-name="menu4-2">我的弟子</p>
+								<p data-name="menu4-3">问答解惑</p>
+								<p data-name="menu4-4">师承管理</p>
+								<p data-name="menu4-5">收徒设置</p>
 							</div>
 						</li>
 						<li class="setTop" id="nav-colume" data-name="doc_zhuanlan"><i class="icomoon-icon-zhuanlan left_range"></i><span>医案专栏</span></li>
