修改上传图片九宫格排序。。

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -303,7 +303,7 @@
 
 	/*动态图片*/
 	.trends_hide{
-		/*background: blue;*/
+		background: #fff;
 	    /*padding: 0.3rem 0;*/
 	    margin: 0.2rem 0;
 	    margin-bottom: 0;
