--- a/wechat/src/main/webapp/xcview/html/outline_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/outline_fragment.html
@@ -14,7 +14,7 @@
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 <!--手机嵌入模板-->
-<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
+<script type="text/javascript" src="/xcviewssss/js/common/layout.js"></script>
 
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script><!--滑动引入js-->
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
@@ -23,21 +23,157 @@
 <script type="text/javascript" src="/xcview/js/course_outline.js"></script>
 <script src="/xcview/js/course_outline.js"></script>
 <link rel="stylesheet" type="text/css" href="/xcview/css/course_outline.css" />
-<script>
-	// 判断横屏展示时的状态
-	window.onorientationchange=function(){
-	    if(window.orientation==90||window.orientation==-90){
-	        window.location.reload();  /*横屏状态刷新*/
-	    }else{
-	        window.location.reload();  /*竖屏状态刷新*/
-	    }
-	}	
-</script>
+<style>
+	*{
+	margin: 0;
+	padding: 0;
+}
+img{
+	border: 0;
+}
+li{
+	list-style: none;
+}
+a{
+	text-decoration: none;
+}
+.both{
+	clear: both;
+}
+
+/*头部开始*/
+header {
+    width: 7.5rem;
+    height: 0.88rem;
+    line-height: 0.88rem;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    margin-left: -3.75rem;
+    z-index: 9;
+    border-bottom: 1px solid #d8dde6;
+}
+.header {
+    width: 7.5rem;
+    height: 100%;
+    /*margin-left: 0.553rem;*/
+    /* padding-top: 0.298rem; */
+}
+.header_return {
+    width: 1.24rem;
+    height: 0.88rem;
+    line-height: 0.5rem;
+    /* background: red; */
+    margin-right: 0.362rem;
+    float: left;
+    position: absolute;
+    z-index: 10;
+    margin-left: 0.26rem;
+}
+.header_return img {
+    width: 0.24rem;
+    height: 0.42rem;
+}
+.header_title {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 0.36rem;
+    text-align: center;
+    color: #333;
+    z-index: 9;
+}
+
+/*头部结束*/
+
+/*中间内容开始*/
+.outline{
+	width: 7.5rem;
+    height: 100%;
+    background: #fff;
+    margin: 0 auto;
+    margin-top: 2.398rem;
+    margin-top: 1.1rem;
+}
+.outline_main{
+	margin-top: ;
+}
+.outline_title{
+	font-size: 0.32rem;
+	color: #333;
+	margin-bottom: 0.31rem;
+	text-align: center;
+    padding-top: 0.36rem;
+}
+.outline_cen{
+	width: 5.5rem;
+    margin: 0 auto;
+    margin-bottom: 0.32rem;
+}
+.outline_cen img{
+	width: 0.24rem;
+    height: 0.24rem;
+    float: left;
+    margin-top: 0.05rem;
+    margin-right: 0.1rem;
+}
+.outline_cen_left{
+	float: left;
+    font-size: 0.26rem;
+    color: #666666;
+    margin: 0 auto;
+    width: 2.98rem;
+}
+.outline_cen_right{
+	float: right;
+    font-size: 0.26rem;
+    color: #666666;
+}
+.outline_cen_border{
+	width: 100%;
+	border-bottom: 1px solid #f0f0f0;
+}
+.outline_list{
+	width: 6.98rem;
+    /* float: right; */
+    margin: 0 auto;
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
+}
+.outline_list_ul p{
+	font-size: 0.26rem;
+    color: #333333;
+    /*border-bottom: 1px solid #d8dde6;*/
+    /*padding: 0.3rem 0;*/
+    word-wrap: break-word;
+}
+.outline_list_ul img{
+    /*max-width: 15rem;*/
+}
+.top_show_height{
+	/* width: 7.5rem;
+	    height: 0.2rem; */
+}
+/*中间内容结束*/
+</style>
 
 </head>
-<body style="background: #F8F8F8;">
+<!--手机嵌入模板-->
+<script>
+		// 整体代码响应式处理
+	var kk=document.documentElement.clientWidth;
+	if(kk>750){
+		kk=750
+	}
+	document.documentElement.style.fontSize=kk/7.5+"px";
+</script>
+<body style="background: #fff;">
 	<!--中间内容开始-->
-	<div class="outline" style="margin-top:0.2rem">
+	<div class="outline" style="margin-top:0rem">
+		<div class="" style="width:7.5rem;margin: 0 auto;height: 0.2rem;background:#F8F8F8;"></div>
 		<div class="outline_main">
 			<script type="text/html" id="outline_main">
 			<div class="outline_title">{{gradeName}}</div>
@@ -61,6 +197,7 @@
 			</div>
 			<div class="both"></div>
 	</div>
+	<div class="top_show_height"></div>
 	<!--中间内容结束-->
 	
 	<!--<div class="div0">
@@ -73,5 +210,8 @@
 	
 	</div>-->
 </body>
-
+<script>
+	/*var outline=$(window).height()-$(".top_show_height").height();
+    $(".outline").height(outline);*/
+</script>
 </html>
