--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -150,7 +150,7 @@
 			<!-- <div class="btn" style="display: none;">
 				<img src="../images/top.png"/>
 			</div> -->
-			<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
+			<!-- <div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;"> -->
 			
 		</div>
 		<!--主讲人-->
