--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -195,6 +195,12 @@
 										<input type="text" placeholder="请输入医馆联系人姓名" maxlength="20" class="doc_shanchang" />
 										<span class="contant_name_warn warning hide" style="margin-left: 0px;">联系人姓名不能为空</span>
 									</div>
+									
+									<div>
+                                        <span><em>*</em>电话</span>
+                                        <input type="text" placeholder="请输入医馆联系电话" maxlength="20" class="doc_tel" />
+                                        <span class="mobile_name_warn warning hide" style="margin-left: 0px;">电话格式不正确</span>
+                                    </div>
 
 									<div>
 										<span><em></em>邮箱</span>
