--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -632,7 +632,7 @@ $.fn.toggle = function( fn, fn2 ) {
 
 <script> 
 // 控制手机物理键--返回
-/*window.onload = function(){
+window.onload = function(){
   if(window.history && window.history.pushState) {  
       $(window).on('popstate', function() {  
           var hashLocation = location.hash;  
@@ -649,7 +649,7 @@ $.fn.toggle = function( fn, fn2 ) {
 	var urlstr = window.location.href;
     window.history.pushState('forward', null,urlstr);    
   }
-};*/
+};
 </script> 
 
 
