--- a/wechat/src/main/webapp/xcview/html/unshelve.html
+++ b/wechat/src/main/webapp/xcview/html/unshelve.html
@@ -55,7 +55,7 @@
 		background: url(../images/soldout.png) no-repeat center;
 		background-size: 100% 100%;
 		color: #999;
-    	font-size: 0.22rem;
+    	font-size: 0.26rem;
     	margin: 0 auto;
 	    margin-top: 1.3rem;
 	    text-align: center;
@@ -78,6 +78,19 @@
 	}
 	.header_title{
 		border-bottom: 1px solid #f8f8f8;
+	}
+	.curriculum{
+		width: 2.96rem;
+		height: 0.64rem;
+		line-height: 0.64rem;
+		text-align: center;
+		font-size: 0.26rem;
+		color: #666;
+		margin: 0 auto;
+		border-radius: 8px;
+		border: 1px solid #dedede;
+		margin-top: 0.5rem;
+    	margin-bottom: 0.5rem;
 	}
 </style>
 </head>
@@ -159,6 +172,7 @@
 		   	    </div>
 	   	    </div>
 	   	    <!--列表内容结束-->
+	   	    <div class="curriculum">去学堂查看更多课程</div>
 	  </div>
 	<!-- 中间内容结束 -->
 	<!-- 底部结束 -->
