下架页面增加--跳转学堂按钮。医案去掉摘要

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -644,7 +644,7 @@
 					<div class="consilia_nav_cen" data-id="{{item.articleId}}" data-status="{{item.articleStatus}}" style="display: block;">
 							<img src="{{item.articleImgPath}}" alt="" />
 							<div class="consilia_nav_cen_size">{{item.articleTitle}}</div>
-							<div class="consilia_nav_cen_sizes">{{item.articleContent}}</div>
+							<!--<div class="consilia_nav_cen_sizes">{{item.articleContent}}</div>-->
 
 					</div>
 					{{else}}
