--- a/wechat/src/main/webapp/xcview/html/unshelve.html
+++ b/wechat/src/main/webapp/xcview/html/unshelve.html
@@ -172,7 +172,7 @@
 		   	    </div>
 	   	    </div>
 	   	    <!--列表内容结束-->
-	   	    <div class="curriculum">去学堂查看更多课程</div>
+	   	    <div class="curriculum" onclick="location.href ='/xcview/html/home_page.html'">去学堂查看更多课程</div>
 	  </div>
 	<!-- 中间内容结束 -->
 	<!-- 底部结束 -->
