专辑选集--隐藏主讲人。。课程删除中间线

--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -43,9 +43,7 @@
 		</div>
 	</div>
 	<div class="hide_height"></div>
-	
-	
-<!--详情开始-->
+	<!--详情开始-->
 	<ul class="my_details">
 		<li><span>详情</span><p></p></li>
 		<li><span class="spanActive">选集</span></li>
@@ -117,7 +115,6 @@
 			</script>	
 		</div>
 
-
 		<div class="data_name">
 			<script type="text/html" id="data_name">
 				<ul class="playTime playTime_z z">
@@ -126,8 +123,6 @@
 				<div class="both"></div>	
 			</script>	
 		</div>
-
-
 		
 		<div class="wrap_synopsis">	
 			<div class="my_synopsis">
@@ -138,22 +133,21 @@
 			</div>		
 		</div>
 		<!--内容-->
-			<div class="wrap">
-				<p class="car_p1"></p>
-				<div class="no_data">暂无课程介绍...</div>
-				<div class="zhezhao" style="display: none;">
-					<img src="../images/op_bg.png"/>	
-				</div>     
-				
-			</div>
-			<!-- 点击收起隐藏 -->
-			<!-- <div class="btn" style="display: none;">
-				<img src="../images/top.png"/>
-			</div> -->
-			<!-- <div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;"> -->
+		<div class="wrap">
+			<p class="car_p1"></p>
+			<div class="no_data">暂无课程介绍...</div>
+			<div class="zhezhao" style="display: none;">
+				<img src="../images/op_bg.png"/>	
+			</div>     
 			
 		</div>
-		<!--主讲人-->
+		<!-- 点击收起隐藏 -->
+		<!-- <div class="btn" style="display: none;">
+			<img src="../images/top.png"/>
+		</div> -->
+		<!-- <div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;"> -->
+		<div class="wrap_speak_hide">
+			<!--主讲人-->
 			<div class="wrap_speak">		
 				<div class="main_speak">
 					<p class="border"></p>
@@ -169,10 +163,13 @@
 					<img src="../images/op_bg.png"/>	
 				</div>      -->
 			</div>
-			<div class="btn1" style="display: none;">
+			<!-- <div class="btn1" style="display: none;">
 				<img src="../images/top.png"/>
-			</div>		
-		</div>
+			</div>	 -->
+		</div>	
+	</div>
+	
+</div>
 	<!--专辑选集-->
 		<div class="my_details_content limit_height"  style="display: block;">
 			<div class="play_to">
