--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -241,9 +241,9 @@
 		<!-- <div class="btn" style="display: none;">
 			<img src="../images/top.png"/>
 		</div> -->
-			<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
+			<!-- <div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
 			
-		</div>
+					</div> -->
 	<!--主讲人-->
 		<div class="wrap_speak">		
 			<div class="main_speak">
