--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -137,9 +137,9 @@
 		<!-- <div class="btn1" style="display: none;">
 			<img src="../images/top.png"/>
 		</div> -->
-		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
+		<!-- <div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
 			
-		</div>
+		</div> -->
 		<!--简介-->
 	<div class="wrap_synopsis">	
 		<div class="my_synopsis">
